--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-
-  "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
-  },
-
-  "dependencies": {
-    "express": "~3.4.4"
-  },
-  "devDependencies": {},
-  "bundleDependencies": [],
-
+  "name": "yoexpressmvc",
+  "version": "0.0.1",
   "private": true,
-  "main": "server.js"
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "~4.12.0",
+    "serve-favicon": "~2.2.0",
+    "morgan": "~1.5.0",
+    "cookie-parser": "~1.3.3",
+    "body-parser": "~1.12.0",
+    "compression": "~1.4.1",
+    "method-override": "~2.3.0",
+    "glob": "~4.4.1",
+    "mongoose": "~3.8.20",
+    "ejs": "~2.3.1"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-develop": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "request": "~2.53.0",
+    "time-grunt": "~1.1.0",
+    "load-grunt-tasks": "~3.1.0"
+  }
 }
