--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "yoexpressmvc",
+  "name": "tvapi",
   "version": "0.0.1",
   "private": true,
+  "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
