--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "~4.12.0",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.12.0",
+    "bootstrap": "^3.3.4",
     "compression": "~1.4.1",
-    "method-override": "~2.3.0",
+    "cookie-parser": "~1.3.3",
+    "ejs": "~2.3.1",
+    "express": "~4.12.0",
     "glob": "~4.4.1",
+    "method-override": "~2.3.0",
     "mongoose": "~3.8.20",
-    "ejs": "~2.3.1"
+    "morgan": "~1.5.0",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
