--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "~4.12.0",
     "glob": "~4.4.1",
     "method-override": "~2.3.0",
+    "moment": "^2.9.0",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.5"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
