--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
     "bootstrap": "^3.3.4",
+    "cheerio": "^0.19.0",
     "compression": "~1.4.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.0",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "~1.3.3",
     "ejs": "~2.3.1",
     "express": "~4.12.0",
+    "express-session": "^1.10.4",
     "glob": "~4.4.1",
+    "lodash": "^3.6.0",
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport.socketio": "^3.5.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5"
   },
