--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-mongo": "^0.8.0",
     "connect-redis": "^2.2.0",
     "cookie-parser": "~1.3.3",
+    "cron": "^1.0.9",
     "ejs": "~2.3.1",
     "express": "~4.12.0",
     "express-session": "^1.10.4",
