--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^3.6.0",
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
+    "moment-timezone": "^0.3.1",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
     "passport": "^0.2.1",
