--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "cheerio": "^0.19.0",
     "compression": "~1.4.1",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.8.0",
-    "connect-redis": "^2.2.0",
     "cookie-parser": "~1.3.3",
     "cron": "^1.0.9",
     "ejs": "~2.3.1",
@@ -29,9 +27,7 @@
     "morgan": "~1.5.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "passport.socketio": "^3.5.0",
-    "serve-favicon": "~2.2.0",
-    "socket.io": "^1.3.5"
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
