--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tvapi",
+  "name": "tv-api",
   "version": "0.0.1",
   "private": true,
   "main": "app.js",
@@ -9,15 +9,11 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
-    "bootstrap": "^3.3.4",
     "cheerio": "^0.19.0",
     "compression": "~1.4.1",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "cron": "^1.0.9",
-    "ejs": "~2.3.1",
     "express": "~4.12.0",
-    "express-session": "^1.10.4",
     "glob": "~4.4.1",
     "lodash": "^3.6.0",
     "method-override": "~2.3.0",
@@ -25,14 +21,10 @@
     "moment-timezone": "^0.3.1",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
+    "request-promise": "^3.0.0",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
     "request": "~2.53.0",
     "time-grunt": "~1.1.0",
     "load-grunt-tasks": "~3.1.0"
