--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.0",
     "cheerio": "^0.19.0",
     "compression": "~1.4.1",
@@ -21,12 +20,13 @@
     "moment-timezone": "^0.3.1",
     "mongoose": "~3.8.20",
     "morgan": "~1.5.0",
-    "request-promise": "^3.0.0",
-    "serve-favicon": "~2.2.0"
+    "request-promise": "^3.0.0"
   },
   "devDependencies": {
-    "request": "~2.53.0",
-    "time-grunt": "~1.1.0",
-    "load-grunt-tasks": "~3.1.0"
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0"
   }
 }
