--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
-module.exports = {
+{
     "extends": "airbnb",
     "plugins": [
         "react",
         "jsx-a11y",
         "import"
     ],
-    "indent": 2
-};
+    "rules": {
+        "indent": ["error", 4]
+    }
+}
