continued testing, wrote first tests to channel API route

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,12 @@
     ],
     "rules": {
         "indent": ["error", 4],
-        "no-console": 0
+        "no-console": 0,
+        "import/no-extraneous-dependencies": 0
+    },
+    "env": {
+        "node": true,
+        "mocha": true,
+        "es6": true
     }
 }
