--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cron": "^1.0.9",
     "express": "~4.12.0",
     "glob": "~4.4.1",
+    "helmet": "^2.3.0",
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
     "moment-timezone": "^0.3.1",
