--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "rules": {
         "indent": ["error", 4],
         "no-console": 0,
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "no-param-reassign": 0
     },
     "env": {
         "node": true,
