--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
     "moment-timezone": "^0.3.1",
-    "mongoose": "~3.8.20",
+    "mongoose": "^4.6.5",
     "morgan": "~1.5.0",
     "request-promise": "^3.0.0"
   },
