--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.12.0",
     "glob": "~4.4.1",
     "helmet": "^2.3.0",
+    "lodash": "^4.16.4",
     "method-override": "~2.3.0",
     "moment": "^2.9.0",
     "moment-timezone": "^0.3.1",
