--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "mocha --recursive"
+    "test": "NODE_ENV=test mocha --recursive"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
