--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "test": "NODE_ENV=test mocha --recursive"
   },
   "dependencies": {
-    "body-parser": "~1.12.0",
+    "body-parser": "^1.12.4",
     "cheerio": "^0.19.0",
-    "compression": "~1.4.1",
-    "cookie-parser": "~1.3.3",
-    "cron": "^1.0.9",
-    "express": "~4.12.0",
-    "glob": "~4.4.1",
+    "compression": "^1.4.4",
+    "cookie-parser": "^1.3.5",
+    "cron": "^1.2.1",
+    "express": "^4.12.4",
+    "glob": "^4.5.3",
     "helmet": "^2.3.0",
-    "lodash": "^4.16.4",
-    "method-override": "~2.3.0",
-    "moment": "^2.9.0",
+    "http-errors": "^1.6.1",
+    "lodash": "^4.17.4",
+    "method-override": "^2.3.8",
+    "moment": "^2.18.1",
     "moment-timezone": "^0.3.1",
-    "mongoose": "^4.6.5",
-    "morgan": "~1.5.0",
-    "request-promise": "^3.0.0"
+    "mongoose": "^4.9.8",
+    "morgan": "^1.5.3",
+    "request-promise": "^3.0.0",
+    "xml-parser": "^1.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.1.0",
-    "eslint-plugin-import": "^1.15.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "mocha": "^3.1.1"
   }
 }
