--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "helmet": "^2.3.0",
     "http-errors": "^1.6.1",
     "lodash": "^4.17.4",
+    "lodash.get": "^4.4.2",
+    "lodash.range": "^3.2.0",
     "method-override": "^2.3.8",
     "moment": "^2.18.1",
     "moment-timezone": "^0.3.1",
