remove channel routes that are not needed, integrate into xmltv, slight refactoring

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
         "import"
     ],
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "no-underscore-dangle": 0
     },
     "env": {
         "node": true,
