--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ node_js:
   - '6'
 services:
   - mongodb
+rvm:
+  - 1.9.3
+before_install:
+  - travis_internal_ruby() { echo "1.9.3"; }
 deploy:
   provider: openshift
   user: jonne.pihlanen@gmail.com
