--- a/package.json
+++ b/package.json
@@ -9,24 +9,19 @@
   },
   "dependencies": {
     "body-parser": "^1.12.4",
-    "cheerio": "^0.19.0",
     "compression": "^1.4.4",
-    "cookie-parser": "^1.3.5",
     "cron": "^1.2.1",
     "express": "^4.12.4",
     "glob": "^4.5.3",
     "helmet": "^2.3.0",
     "http-errors": "^1.6.1",
     "lodash": "^4.17.4",
-    "lodash.get": "^4.4.2",
-    "lodash.range": "^3.2.0",
     "method-override": "^2.3.8",
     "moment": "^2.18.1",
     "moment-timezone": "^0.3.1",
     "mongodb": "^2.2.30",
     "morgan": "^1.5.3",
-    "request-promise": "^3.0.0",
-    "xml-parser": "^1.2.1"
+    "request-promise": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
