--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "cron": "^1.2.1",
     "moment": "^2.18.1",
     "moment-timezone": "^0.3.1",
-    "mongodb": "^2.2.30",
-    "request-promise": "^3.0.0"
+    "mongodb": "^2.2.30"
   },
   "devDependencies": {
     "chai": "^3.5.0",
