--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "NODE_ENV=test mocha --recursive",
-    "lint": "eslint app config test"
+    "test": "NODE_ENV=test nyc mocha --recursive",
+    "lint": "eslint app config test",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "cron": "^1.2.1",
@@ -17,9 +18,11 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "coveralls": "^3.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "mocha": "^3.1.1"
+    "mocha": "^3.1.1",
+    "nyc": "^11.2.1"
   }
 }
