--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - 'node'
 services:
   - mongodb
-before_install: npm run lint
+before_script: npm run lint
 after_success: npm run coveralls
