--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "NODE_ENV=test nyc mocha --recursive",
+    "test": "NODE_ENV=test nyc mocha --recursive --exit",
     "lint": "eslint app config test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
