tests for toResultObject helper & add own eslintrc for test folder

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
         "no-underscore-dangle": 0
     },
     "env": {
-        "node": true,
-        "mocha": true
+        "node": true
     }
 }
