--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/index.js",
     "test": "NODE_ENV=test nyc mocha --recursive --exit",
-    "lint": "eslint app config test",
+    "lint": "eslint src test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
