--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/index.js",
     "test": "NODE_ENV=test nyc mocha --recursive --exit",
-    "lint": "eslint app config test",
+    "lint": "eslint src test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "cron": "^1.2.1",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.16",
-    "mongodb": "^3.0.7"
+    "cron": "^1.8.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
+    "mongodb": "^3.5.4"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "coveralls": "^3.0.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.1.1",
-    "nyc": "^13.0.1"
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "mocha": "^7.1.0",
+    "nyc": "^15.0.0"
   }
 }
